updated Ui + mobile nav + footer + home view

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,7 +2,13 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="homeBackground">
+
+</div>
+
+<div class="homeHeading1">
+    <div>
+        <h1>TodoLive Ai</h1>
+        <p>This is your AI-powered digital assistant, designed to streamline tasks, provide personalized recommendations, and enhance your online experience. It understands your voice and text commands, learns from your interactions, and ensures your data's security.</p>
+    </div>
 </div>
