--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -3,7 +3,7 @@
 @inject UserManager<IdentityUser> UserManager
 
 
-@if (SignInManager.IsSignedIn(User))
+@* @if (SignInManager.IsSignedIn(User))
 {
     <ul class="navbar-nav">
         <li class="nav-item">
@@ -24,6 +24,41 @@ else
         </li>
         <li class="nav-item">
             <a class="nav-link text-light" asp-area="Identity" asp-page="/Account/Login">Login</a>
+        </li>
+    </ul>
+} *@
+
+
+@if (SignInManager.IsSignedIn(User))
+{
+    <ul class="">
+        <li class="">
+            <a class="" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity?.Name!</a>
+        </li>
+        <li class="">
+@*             <form class="" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+                <button type="submit" class="customNavLogoutBtn">Logout</button>
+            </form> *@
+
+            <form class="" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+                <button type="submit" class="customNavLogoutBtn">
+                    <span title="Logout" class="material-symbols-outlined">
+                        logout
+                    </span>
+                </button>
+            </form>
+
+        </li>
+    </ul>
+}
+else
+{
+    <ul class="">
+        <li class="">
+            <a class="" asp-area="Identity" asp-page="/Account/Register">Register</a>
+        </li>
+        <li class="">
+            <a class="" asp-area="Identity" asp-page="/Account/Login">Login</a>
         </li>
     </ul>
 }
