--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -17,11 +17,22 @@
     --menuDark: #322C31;
     --menuLight: #B1B0B1;
     --barelyVisibleLigt: #f5f5f54c;
+    --cardBorder: #c7c7c738;
+}
+
+/*RESET BOOTSRAP STYLES*/
+ol, ul {
+    padding-left: 0;
+}
+
+dl, ol, ul {
+    margin-bottom: 0rem;
 }
 
 body {
     font-family: 'Poppins', sans-serif;
     background-color: var(--menuDarker);
+    color: var(--fontLight);
     /*background-image: linear-gradient(to right, #212020, #070f27);*/
 }
 
@@ -29,43 +40,118 @@ body {
 
 }
 /* NAVIGATION */
-.customNav {
-    margin-bottom: 0 !important;
+header {
     position: fixed;
     width: 100%;
-    z-index: 1;
+    top: 0;
+    z-index: 3;
 }
-/*.preventTextSelect {
-    -webkit-user-select: none;
-    -webkit-touch-callout: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-}*/
 
+.customNav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 50px;
+    background-color: var(--backgroundDark);
+    border-bottom: 1px solid #d7d7d759
+}
+
+.customNavLogoLink {
+    margin-left: 10%;
+}
+
+.customNavLogoLink a {
+    text-decoration: none;
+    color: var(--fontLight);
+}
+
+.customNavLogoLink img {
+    width: 40px;
+}
+
+.customNavLinksAndAccount {
+    display: flex;
+}
+
+.customNavLinksAndAccount ul {
+    display: flex;
+}
+
+.customNavLinksAndAccount li {
+    list-style: none;
+    margin: 1rem;
+    margin-bottom: .6rem;
+}
+
+.customNavLinksAndAccount a {
+    text-decoration: none;
+    color: var(--fontLight);
+}
+
+.customNavLogoutBtn {
+    border: none;
+    background: none;
+    color: var(--fontLight);
+}
 /* GOOGLE ICONS */
 .material-symbols-outlined {
     /*font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24*/
     font-weight: 100;
 }
 
-.buttonCustomGreen {
-
-}
-
-.addTodoBtn {
-    width: 120px;
-    height: 40px;
-    background-color: var(--greenLight);
-    color: white;
+/*FOOTER*/
+footer {
+    min-height: 300px;
+    margin: auto;
     display: flex;
     justify-content: center;
-    align-items: center;
-    border-radius: 5px;
-    cursor: pointer;
-    margin-bottom: 1rem;
+    text-align:center;
 }
 
+footer h2 {
+    font-size: 80px;
+    font-weight: 900;
+    margin: 1rem;
+}
+
+.footerTechLogos {
+    background-color: var(--fontLight);
+    padding: 1rem;
+    border-radius: 5px;
+}
+
+.footerTechLogos img {
+    width: 50px;
+}
+
+/*HOME*/
+.homeBackground {
+    width: 100%;
+    height: 100vh;
+    background-image: url(/Images/Background/pxfuel.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    z-index: -1;
+}
+
+.homeHeading1 {
+    background-image: linear-gradient(to left, #220d27, #005ec333);
+    width: 100%;
+    position: absolute;
+    top: 50px;
+    right: 0;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.homeHeading1 div {
+    width: 410px;
+    margin: 2rem;
+    margin-right: 6.2rem;
+    text-align: justify-all;
+}
+/*USER TASKS*/
 .createTaskForm {
     position: relative;
 }
@@ -77,7 +163,6 @@ body {
     margin: auto;
     margin-bottom: 1rem;
 }
-
 
 .customInputLabelBox1 {
     position: relative;
@@ -154,9 +239,9 @@ body {
     background-color: var(--menuDark);
     color: var(--menuLight);
     border-radius: 5px;
-    margin-bottom: 5rem;
-    min-width: 1000px;
-
+    margin-bottom: 4rem;
+    width: 700px;
+    border: dashed 1px var(--cardBorder);
 }
 
 .customCardHeader {
@@ -171,7 +256,8 @@ body {
 }
 
 .customHeaderColorPriority {
-    width: 60%;
+    position: absolute;
+    width: 250px;
 }
 
 .customHeaderColorPriority div {
@@ -219,10 +305,11 @@ body {
     padding: .5rem;
 }
 
-.cardFooter span:hover {
+.cardFooterButtonsHover:hover {
     font-weight: 900;
     transform: scale(1.1);
     transition: .2s ease-in-out;
+    cursor: pointer;
 }
 
 .cardFooter {
@@ -242,6 +329,13 @@ body {
     padding: .3rem;
     margin: .4rem;
     border-radius: 20px;
+    -webkit-user-select: none; /* Safari */
+    -ms-user-select: none; /* IE 10 and IE 11 */
+    user-select: none; /* Standard syntax */
+}
+
+.cardFooterBtns {
+    overflow-x: hidden;
 }
 
 .cardFooterBtsWithConfirm {
@@ -268,59 +362,63 @@ body {
 
 .cardFooterConfirmBoxShow {
     opacity: 1;
-    width: 80px;
+    width: 83px;
     pointer-events: unset;
 }
 
+/*USER TASKS MENU */
 
-/*USER TASKS*/
-.userTasksMain {
+.addTodoBtn {
+    position: fixed;
+    left: 2rem;
+    bottom: 2rem;
+    width: 235px;
+    height: 40px;
+    background-color: var(--greenLight);
     display: flex;
-    width: 800px;
-    margin: auto;
-    transform: translateY(80px);
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-bottom: 1rem;
 }
 
-.userTasksMain li {
-    list-style: none;
-}
-
-.userTasksLeftMenu li {
-    list-style: none;
+.taskMenu {
+    display: flex;
+    margin-top: 50px;
 }
 
 .userTasksContent {
-    display: flex;
-    flex-direction: column;
-    align-items: end;
+    margin-top: 2.5rem;
 }
 
-.userTaskTopMenu {
-
+.userTaskLeftMenuContent {
+    position: fixed;
+    margin: 2rem;
 }
-
-.userTasksBox {
-}
-
-/*LEFT MENU */
 
 .userTasksLeftMenu {
-    position: fixed;
-    color: var(--fontLight);
-    margin-top: 100px;
+    min-width: 300px;
+    border-right: 1px dashed #cccccc38;
+}
+
+.userTasksLeftMenu ul {
+    padding: 0;
 }
 
 .userTasksLeftMenu li {
     margin: .5rem;
     transition: .1s ease-in-out;
     cursor: pointer;
+    list-style: none;
 }
 
 .userTasksLeftMenu li:hover {
-    transform: translateX(10px);
+    transform: translateX(5px);
 }
 
 #menuLeftSubMenu1Btn {
+
 }
 
 .menuLeftSubMenu1 {
@@ -330,4 +428,146 @@ body {
 
 .showMenuLeftSubMenu1 {
     height: auto;
+}
+
+.userTasksMain {
+    margin: auto;
+}
+
+@media screen and (max-width: 1055px){
+
+    header {
+        width: 250px;
+        transform: translate(-100%);
+    }
+
+    .customNav {
+        flex-direction: column;
+        align-items: center;
+        justify-content: unset;
+        height: 70vh;
+        border-right: 1px solid #d7d7d759;
+        border-radius: 0 0 5px 0;
+    }
+
+    .customNavLogoLink {
+        margin-left: unset;
+        margin-top: 1rem;
+    }
+
+    .customNavLogoLink a {
+        text-decoration: none;
+    }
+
+    .customNavLinksAndAccount {
+        display: block;
+    }
+
+    .customNavLinksAndAccount ul {
+        display: block;
+        margin-bottom: 2rem;
+    }
+
+    /*MOBILE MENU*/
+
+    .customNavMobileMenuBtn {
+        position: fixed;
+        top: 1rem;
+        right: 1.5rem;
+        cursor: pointer;
+        z-index: 2;
+    }
+
+    .customNavMobileMenuBtn div:nth-child(1),
+    .customNavMobileMenuBtn div:nth-child(2),
+    .customNavMobileMenuBtn div:nth-child(3) {
+        width: 35px;
+        height: 3px;
+        background-color: var(--fontLight);
+        margin: 5px;
+        border-radius: 2px;
+        transition: .1s ease-in-out;
+    }
+
+    .customNavMobileMenuBtnChangeShapeToClose div:nth-child(1) {
+        transform: rotate(-45deg) translate(-5px, 6px);
+    }
+
+    .customNavMobileMenuBtnChangeShapeToClose div:nth-child(3) {
+        transform: rotate(45deg) translate(-5px, -6px);
+    }
+
+    .customNavMobileMenuBtnChangeShapeToClose div:nth-child(2) {
+        opacity: 0;
+    }
+
+    .toggleMobileMenu {
+        transform: translate(0);
+        transition: .2s ease-in-out;
+    }
+
+    /*USER TASKS MENU */
+
+    .addTodoBtn {
+        width: 21%;
+        z-index: 2;
+    }
+
+    .taskMenu {
+        margin-top: 0px;
+    }
+
+    .userTasksLeftMenu {
+        min-width: 28%;
+    }
+
+    .userTasksContent {
+        margin-top: 3rem;
+        width: 100%;
+    }
+
+    /* CARD */
+
+    .customCard {
+        width: unset;
+        margin: 2rem;
+        margin-bottom: 2rem;
+    }
+
+}
+
+@media screen and (max-width: 820px) {
+
+    body p {
+        font-size: 14px;
+    }
+
+    /*USER TASKS MENU */
+
+    .addTodoBtn {
+        top: .8rem;
+        right: 5.5rem;
+        left: unset;
+        bottom: unset;
+        width: 130px;
+    }
+
+    .taskMenu {
+        display: unset;
+        margin-top: 0px;
+    }
+
+    .userTasksContent {
+        margin-top: 150px;
+    }
+
+    .userTaskLeftMenuContent {
+        margin: 0rem;
+        background-color: var(--backgroundDark);
+        top: 0;
+        width: 100%;
+        z-index: 1;
+        margin-left: 1.5rem;
+    }
+
 }
